<resources>
    <string name="app_name">صنعة</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">الايميل</string>
    <string name="prompt_password">كلمة المرور</string>
    <string name="action_sign_in">دخول او انشاء حساب</string>
    <string name="action_sign_in_short">دخول</string>
    <string name="welcome">"مرحبا !"</string>
    <string name="invalid_username">الاسم ليس صحيحاَ</string>
    <string name="invalid_email">الايميل ليس صحيحاَ</string>
    <string name="invalid_password">يجب ان تتكون كلمة المرور اكثر من ٥ حروف</string>
    <string name="invalid_repeat_password">كلمة المرور ليست متطابقة</string>
    <string name="login_failed">خطأ في تسجيل الدخول</string>
    <string name="register_failed">خطأ في انشاء الحساب</string>
    <string name="card_id_error">رقم الهوية مكرر</string>
    <string name="invalid_phone">رقم الهاتف اجباري</string>
    <string name="invalid_profession">المهنة اجبارية</string>
    <string name="invalid_card_id">يجب ان يتكون رقم الهوية من ٩ خانات</string>

    <string name="login_email_hint">الايميل</string>
    <string name="register_email_hint">الايميل(اجباري)</string>
    <string name="login_password_hint">كلمة المرور</string>
    <string name="register_password_hint">كلمة المرور(اجباري)</string>
    <string name="login_repeat_password_hint">اعد كتابة كلمة المرور(اجباري)</string>
    <string name="title_activity_dashboard">DashboardActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">الاعدادات</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="news_feed">الاعلانات</string>
    <string name="requests">الطلبات</string>
    <string name="profile">الحساب</string>
    <string name="logout">تسجيل الخروج</string>
    <string name="my_team">فريقي</string>

    <string name="title_activity_profile">الحساب</string>
    <string name="location">الموقع</string>
    <string name="profession">المهنة</string>
    <string name="category">التخصص</string>
    <string name="description">تفاصيل</string>
    <string name="name">الاسم الاول(اجباري)</string>
    <string name="name_father">اسم الاب</string>
    <string name="name_family">اسم العائلة</string>
    <string name="name_company">اسم الشركة</string>
    <string name="mobile_number">رقم المحمول(اجباري)</string>
    <string name="mobile_card_id">رقم الهوية(اجباري)</string>
    <string name="card_id">رقم الهوية</string>
    <string name="register">إنشاء حساب</string>
    <string name="edit">تعديل</string>
    <string name="apply">تقدم</string>
    <string name="hire">توظيف</string>
    <string name="users">المهنيين</string>
    <string name="search">بحث</string>
    <string name="companies">المشغلين</string>
    <string name="create_post">إنشاء اعلان</string>
    <string name="write_a_post">اكتب إعلان</string>
    <string name="post">نشر</string>
    <string name="incoming_requests">الطلبات القادمة</string>
    <string name="outgoing_requests">الطلبات الصادرة</string>
    <string name="accept">قبول</string>
    <string name="deny">رفض</string>
    <string name="cancel">الغاء</string>
    <string name="requested_to_join">%s طلب الانضمام!</string>
    <string name="you_sent_invitation_to">لقد ارسلت طلبا الى %s!</string>
    <string name="are_you_sure_you_want_to_logout">هل تريد بالتأكيد تسجيل الخروج؟</string>
    <string name="back">رجوع</string>
    <string name="account_info">تفاصيل الحساب</string>
    <string name="guest">ضيف</string>
    <string name="worker">مهني</string>
    <string name="company">مشغل</string>
    <string name="delete">حذف</string>
    <string name="no_data_to_show">لا يوجد بيانات لعرضها!</string>
    <string name="denied">مرفوض</string>
    <string name="accepted">تمت الموافقة</string>
    <string name="request">طلب</string>
    <string name="already_nhave_an_naccount">لديك حساب \nبالفعل؟</string>
    <string name="forgot_password">نسيت كلمة المرور</string>
    <string name="here_s_nyour_first_nstep_with_nus">خطوتك الأولى\nللإنضمام معنا!</string>
    <string name="already_have_an_account">لديك حساب بالفعل؟</string>
    <string name="mobile">المحمول</string>
    <string name="login">تسجيل الدخول</string>
    <string name="login_guest">تسجيل الدخول كزائر</string>
    <string name="new_user_register_now">مستخدم جديد؟ إنشاء حساب</string>
    <string name="details">تفاصيل</string>
    <string name="ok">Ok</string>
    <string name="title_activity_login33">LoginActivity33</string>
    <string name="about">حول</string>
    <string name="about_desc">تطبيق صنعة يوفر فرص عمل للمهنين ويسهل على المشغلين التواصل وايجاد المهنيين ويزيد لكل منهما بنسبة الفرص للحصول على العمل قم بالتسجيل الان وتمتع بمميزات التطبيق</string>
</resources>