<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.EditProfileActivity">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="8dp"
            app:cardBackgroundColor="@color/whiteTextColor"
            app:cardCornerRadius="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:orientation="vertical">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInputName"
                    style="@style/parent"
                    android:layout_marginTop="@dimen/loginViewsMargin">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/editTextName"
                        style="@style/modifiedEditText"
                        android:hint="@string/name"
                        android:inputType="textPersonName"
                        android:maxLines="1" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInputFather"
                    style="@style/parent"
                    android:layout_marginTop="@dimen/loginViewsMargin">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/editTextFather"
                        style="@style/modifiedEditText"
                        android:hint="@string/name_father"
                        android:inputType="textPersonName"
                        android:maxLines="1" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInputFamily"
                    style="@style/parent"
                    android:layout_marginTop="@dimen/loginViewsMargin">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/editTextFamily"
                        style="@style/modifiedEditText"
                        android:hint="@string/name_family"
                        android:inputType="textPersonName"
                        android:maxLines="1" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInputEmail"
                    style="@style/parent"
                    android:layout_marginTop="@dimen/loginViewsMargin">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/editTextEmail"
                        style="@style/modifiedEditText"
                        android:hint="@string/register_email_hint"
                        android:inputType="textEmailAddress"
                        android:maxLines="1" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInputCardId"
                    style="@style/parent"
                    android:layout_marginTop="@dimen/loginViewsMargin">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/editTextCardId"
                        style="@style/modifiedEditText"
                        android:hint="@string/mobile_card_id"
                        android:inputType="text"
                        android:maxLines="1" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInputMobile"
                    style="@style/parent"
                    android:layout_marginTop="@dimen/loginViewsMargin">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/editTextMobile"
                        style="@style/modifiedEditText"
                        android:hint="@string/mobile_number"
                        android:inputType="phone"
                        android:maxLines="1" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInputLocation"
                    style="@style/parent"
                    android:layout_marginTop="@dimen/loginViewsMargin">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/editTextLocation"
                        style="@style/modifiedEditText"
                        android:hint="@string/location"
                        android:inputType="text"
                        android:maxLines="1" />
                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/btnProfession"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/profession" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInputComapny"
                    style="@style/parent"
                    android:layout_marginTop="@dimen/loginViewsMargin">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/editTextCompany"
                        style="@style/modifiedEditText"
                        android:hint="@string/name_company"
                        android:inputType="text" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInputDescription"
                    style="@style/parent"
                    android:layout_marginTop="@dimen/loginViewsMargin">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/editTextDescription"
                        style="@style/modifiedEditText"
                        android:hint="@string/description"
                        android:inputType="text" />
                </com.google.android.material.textfield.TextInputLayout>

                <br.com.simplepass.loading_button_lib.customViews.CircularProgressButton
                    android:id="@+id/cirRegisterButton"
                    style="@style/loginButton"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/loginViewsMargin"
                    android:text="@string/edit"
                    app:initialCornerAngle="27dp"
                    app:spinning_bar_color="#FFF"
                    app:spinning_bar_padding="6dp"
                    app:spinning_bar_width="4dp" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>