<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="4dp"
        app:cardCornerRadius="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="8dp">

            <ImageView
                android:id="@+id/iv_profile"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:src="@drawable/ic_account_circle_black_48dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_content"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                app:layout_constraintBottom_toBottomOf="@id/iv_profile"
                app:layout_constraintStart_toEndOf="@id/iv_profile"
                app:layout_constraintTop_toTopOf="@id/iv_profile"
                tools:text="You sent invitation to Yazan" />

            <TextView
                android:id="@+id/tv_details"
                tools:text="Details here..."
                app:layout_constraintTop_toBottomOf="@id/tv_content"
                app:layout_constraintStart_toStartOf="@id/tv_content"
                android:textSize="12sp"
                android:textColor="@color/black"
                android:textStyle="italic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <br.com.simplepass.loading_button_lib.customViews.CircularProgressButton
                android:id="@+id/btn_cancel"
                style="@style/loginButton"
                android:layout_width="100dp"
                android:layout_height="35dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/button_background_red"
                android:text="@string/cancel"
                app:initialCornerAngle="27dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_details"
                app:spinning_bar_color="#FFF"
                app:spinning_bar_padding="6dp"
                app:spinning_bar_width="4dp" />

            <br.com.simplepass.loading_button_lib.customViews.CircularProgressButton
                android:id="@+id/btn_profile"
                style="@style/loginButton"
                android:layout_width="100dp"
                android:layout_height="35dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:text="@string/profile"
                app:initialCornerAngle="27dp"
                app:layout_constraintEnd_toStartOf="@id/btn_cancel"
                app:layout_constraintTop_toTopOf="@id/btn_cancel"
                app:spinning_bar_color="#FFF"
                app:spinning_bar_padding="6dp"
                app:spinning_bar_width="4dp" />

            <TextView
                android:id="@+id/tv_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_manager_mode_toggle_right"
                android:padding="8dp"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:text="@string/denied"
                android:textColor="@color/white"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/btn_profile" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>

